docs/k8s/03_nacos/nacos.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nacos-headless
  namespace: ns-dev
  labels:
    name: svc-nacos-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 9848
      name: client-rpc
      targetPort: 9848
    - port: 9849
      name: raft-rpc
      targetPort: 9849
    - port: 7848
      name: old-raft-rpc
      targetPort: 7848
  selector:
    name: sts-nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-nacos
  namespace: ns-dev
  labels:
    name: sts-nacos
spec:
  serviceName: svc-nacos-headless
  replicas: 3
  selector:
    matchLabels:
      name: sts-nacos
  template:
    metadata:
      name: sts-nacos
      namespace: ns-dev
      labels:
        name: sts-nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - sts-nacos
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nacos
          image: nacos/nacos-server:latest
          ports:
            - containerPort: 8848
              name: client
            - containerPort: 9848
              name: client-rpc
            - containerPort: 9849
              name: raft-rpc
            - containerPort: 7848
              name: old-raft-rpc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nacos
  namespace: ns-dev
  labels:
    name: ingress-nacos
spec:
  rules:
    - host: nacos.d4peng.icu
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-nacos-headless
              servicePort: 8848
